--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,16 +18,16 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
 
 
-  responsive_builder: ^0.2.0+2
-  font_awesome_flutter: ^8.8.1
-  cupertino_icons: ^0.1.3
+  responsive_builder: ^0.4.0
+  font_awesome_flutter: 10.7.0
+  cupertino_icons: ^1.0.0
 
 dev_dependencies:
   flutter_test:
